# kitelang

./: .gitignore  CMakeLists.txt  README.md  build.sh  buildkite.sh  hello.kite  out.asm  run.sh  source.kite  testkite.sh
kitelang/: CMakeLists.txt  common.cpp  common.h  kitelang.cpp  kitelang.h
kitelang/compiler/: compiler.cpp  compiler.h
kitelang/errors/: errors.h
kitelang/lexer/: lexer.cpp  lexer.h  token.h
kitelang/parser/: node.h  parser.cpp  parser.h
kitelang/precompiler/: precompiler.cpp  precompiler.h
kitelang/semantics/: semantics.cpp  semantics.h
stdinclude/: filesystem.km  math.km  process.km  stdio.km  string.km
stdlib/: Makefile  filesystem.kite  math.kite  process.kite  stdio.kite  string.kite
stdlib/include/: filesystem.km  math.km  process.km  stdio.km  string.km
